# FFmpeg-Qt

./: CMakeLists.txt
cmake/: FindFFmpeg.cmake
src/: ffmpeg.cpp  ffmpeg.h  ffmpeg_video.cpp  ffmpeg_video.h  main.cpp  pbdecoderthread.cpp  pbdecoderthread.h  pbframehandler.cpp  pbframehandler.h  pbvideodescriptor.h  pbvideowidget.cpp  pbvideowidget.h  videohandler.h
